--- a/css/index.css
+++ b/css/index.css
@@ -64,9 +64,49 @@ footer li {
 }
 
 .flexContainer div {
-    width: 33%;
+    width: 50%;
     padding:6%;
+    margin: 0 auto;
 }
+
+/* Style the tab */
+.tabBar {
+    justify-content: center;
+}
+.tab {
+    overflow: hidden;
+    border: 1px solid purple;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
 
 .myWork {
     text-align: center;
