--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,14 @@
+body {
+    background-color: lightblue;
+}
+
 /* navigation */
 .inline-block li {
     display: inline-block;
     vertical-align: top;
+    background-color: purple;
+    border-radius: 3px;
+    color: white;
 }
 
 .logo {
@@ -70,43 +77,81 @@ footer li {
 }
 
 /* Style the tab */
-.tabBar {
-    justify-content: center;
+.tabs{
+    width:60%;
+    height:auto;
+    margin:0 auto;
 }
-.tab {
-    overflow: hidden;
-    border: 1px solid purple;
-    background-color: #f1f1f1;
-  }
-  
-  /* Style the buttons that are used to open the tab content */
-  .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
-    background-color: #ccc;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-  }
+
+/* tab list item */
+.tabs .tabs-list{
+    list-style:none;
+    margin:0px;
+    padding:0px;
+}
+.tabs .tabs-list li{
+    width:100px;
+    float:left;
+    margin:0px;
+    margin-right:2px;
+    padding:10px 5px;
+    text-align: center;
+    background-color:cornflowerblue;
+    border-radius:3px;
+}
+.tabs .tabs-list li:hover{
+    cursor:pointer;
+}
+.tabs .tabs-list li a{
+    text-decoration: none;
+    color:white;
+}
+
+/* Tab content section */
+.tabs .tab{
+    display:none;
+    width:100%;
+    min-height:250px;
+    height:auto;
+    border-radius:3px;
+    padding:20px 15px;
+    background-color:lavender;
+    color:darkslategray;
+    clear:both;
+}
+.tabs .tab h3{
+    border-bottom:3px solid cornflowerblue;
+    letter-spacing:1px;
+    font-weight:normal;
+    padding:5px;
+}
+.tabs .tab p{
+    line-height:20px;
+    letter-spacing: 1px;
+}
+
+/* When active state */
+.active{
+    display:block !important;
+}
+.tabs .tabs-list li.active{
+    background-color:lavender !important;
+    color:black !important;
+}
+.active a{
+    color:black !important;
+}
+
+/* media query */
+@media screen and (max-width:360px){
+    .tabs{
+        margin:0;
+        width:96%;
+    }
+    .tabs .tabs-list li{
+        width:80px;
+    }
+}
 
 .myWork {
     text-align: center;
@@ -125,12 +170,14 @@ grid-template-areas:
 "project2 pic2";
 }
 
-#pic1 {
-    padding-bottom: 15%;
+#pic1 img {
+    width: 75%;
 }
 
-#pic2 {
+#pic2 img {
     padding-bottom: 15%;
+    width: 75%;
+    height: auto;
 }
 
 /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
